charts/monitoring/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - env: []
        image: grafana/grafana:latest
        name: grafana
        ports:
        - containerPort: 3000
          name: http
        readinessProbe:
          httpGet:
            path: /api/health
            port: http
        resources:
          # limits:
          #   cpu: 200m
          #   memory: 200Mi
          # requests:
          #   cpu: 100m
          #   memory: 100Mi
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-ssd
          readOnly: false
      # nodeSelector:
      #   node-type: worker
      securityContext:
        fsGroup: 1000 
        runAsNonRoot: true
        runAsUser: 1000 
      serviceAccountName: grafana
      volumes:
        - name: grafana-ssd
          persistentVolumeClaim:
            claimName: grafana-ssd
