charts/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  type: ClusterIP 
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
