charts/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring 
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    spec.ingressClassName: traefik
  labels:
    app: grafana 
spec:
  rules:
    - host: "grafana.friis-jespersen.dev" 
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
            service:
              name: grafana 
              port:
                number: 80

  tls:
    - hosts:
        - friis-jespersen.dev
      secretName: friisjespersen-com-tls
